tests/ui/feature-gates/feature-gate-trace_macros.stderr
error[E0658]: use of unstable library feature `trace_macros`: `trace_macros` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-trace_macros.rs:2:5
   |
LL |     trace_macros!(true);
   |     ^^^^^^^^^^^^
   |
   = note: see issue #29598 <https://github.com/rust-lang/rust/issues/29598> for more information
   = help: add `#![feature(trace_macros)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
