tests/ui/feature-gates/feature-gate-trace_macros.rs
fn main() {
    trace_macros!(true); //~ ERROR: `trace_macros` is not stable
}
